tests/specs/ecosystem/kms0219kms/portone/2_1_0.test
kms0219kms/portone/2.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/pg-specific.ts:9:14
  | 
9 | export const forSpecificPg = (_request: RequestInstance) => {
  |              ^^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/common/request.ts:4:17
  | 
4 | export function createRequestInstance(
  |                 ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/identify-verifications.ts:9:14
  | 
9 | export const identifyVerifications = (
  |              ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/cash-receipts.ts:9:14
  | 
9 | export const cashReceipts = (
  |              ^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/billing-keys.ts:9:14
  | 
9 | export const billingKeys = (
  |              ^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/payment-schedules.ts:9:14
  | 
9 | export const paymentSchedules = (
  |              ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/escrow.ts:9:14
  | 
9 | export const escrow = (
  |              ^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/payments.ts:9:14
  | 
9 | export const payments = (
  |              ^^^^^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/auth.ts:9:14
  | 
9 | export const auth = (_request: RequestInstance) => {
  |              ^^^^ this function is missing an explicit return type
  | 
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


